--- a/AppServSalud/src/main/resources/templates/forms/registroProfesional.html
+++ b/AppServSalud/src/main/resources/templates/forms/registroProfesional.html
@@ -202,7 +202,7 @@
                             <input
                                 type="number"
                                 class="form-control"
-                                name="matricula"
+                                name="matriculaProfesional"
                                 placeholder="0123456789"
                                 id="profesionalMatricula"
                             >
@@ -217,12 +217,13 @@
                             <select
                                 class="form-select"
                                 id="especialidad"
+                                name="especialidad"
                             >
                                 <option selected>Elige una opción</option>
-                                <option value="Clinica">Clínica</option>
-                                <option value="Cardiologia">Cardiologia</option>
-                                <option value="Ginecologia">Ginecologia</option>
-                                <option value="Pediatria">Pediatria</option>
+                                <option value="CLINICA">Clínica</option>
+                                <option value="CARDIOLOGIA">Cardiologia</option>
+                                <option value="GINECOLOGIA">Ginecologia</option>
+                                <option value="PEDIATRIA">Pediatria</option>
                             </select>
                         </div>
                     </div>
