--- a/AppServSalud/src/main/resources/static/styles/perfil.css
+++ b/AppServSalud/src/main/resources/static/styles/perfil.css
@@ -1,13 +1,13 @@
 .card-article{
- 
   top: 30vh;
   width: fit-content !important;
-  height: 600px;
+  height: 700px !important;
   margin-left: auto;
   margin-right: auto;
   background-color: #86d162;   
   border-radius: 10px;
   padding: 0px !important;
+    border: 1px solid rgb(156,112,10);
 }
 
 .profile {
@@ -25,7 +25,7 @@
 }
 .card-body{
     position: relative;
-    top: 170px;
+    top: 160px;
     width: 100%;
     height: 100px;
     text-align: center;
@@ -45,9 +45,9 @@ margin-right: 20px;
 .avatar-img {
     position: absolute;
     top: 30px;
-    left: 125px;
-    width: 250px;
-    height: 250px;
+    left: 140px;
+    width: 220px;
+    height: 220px;
     border-radius: 50%;
     border: 3px solid rgb(56, 112, 10);
     background-color: rgb(56, 112, 10);
@@ -61,4 +61,8 @@ margin-right: 20px;
     font-family: fantasy;
     text-align: left;
 
+}
+
+.circle{
+    border-radius: 50% !important;
 }
