--- a/AppServSalud/src/main/resources/templates/forms/editarPaciente.html
+++ b/AppServSalud/src/main/resources/templates/forms/editarPaciente.html
@@ -7,7 +7,7 @@
     <body>
         <header th:replace="/fragments/header :: header"></header>
         <div class="container" role="alert">
-            <div class="container-fluid m-5 contenedor">
+            <div class="container-fluid m-5">
                 <div
                     th:if="${error != null}"
                     class="card text-white bg-danger mb-3 mensajeError"
@@ -54,18 +54,25 @@
                                 for="fotoPerfil"
                                 class="input-group-text"
                             >Cambiar foto de perfil </label>
-                           
-                            <img th:src="@{/imagen/perfil/__${session.usuario.id}__}" 
+
+                            <img th:src="@{/imagen/perfil/__${paciente.id}__}"
                                  class="rounded float-start"
                                  width="320"
                                  height="280"
-                                 alt="fotoPerfil"> 
+                                 alt="fotoPerfil"
+                                 th:if="${paciente.imagen != null}" >
+                            <img th:src="@{/assets/avatar.png}"
+                                 class="circle"
+                                 width="320"
+                                 height="280"
+                                 alt="fotoPerfil"
+                                 th:if="${paciente.imagen == null}" >
                         </div>
-                        <div class="input-group mb-3">    
-                        <input type="file" 
-                               class="form-control" 
-                               name="archivo" 
-                               >
+                        <div class="input-group mb-3">
+                            <input type="file"
+                                   class="form-control"
+                                   name="archivo"
+                                   >
                         </div>
                         
                     </div>
@@ -114,19 +121,17 @@
                                 for="obraSocial"
                             >Obra Social</label>
                             <select
-                                class="form-select"
-                                id="pacienteObraSocial"
-                                name="obraSocial"
-                                th:value="${paciente.obraSocial}"
+                                    id="obraSocial"
+                                    class="form-select"
+                                    name="obraSocial"
                             >
-                                <option selected>Elige tu obra social</option>
-                                <option value="OSPE">OSPE</option>
-                                <option value="SWISS_MEDICAL">SwissMedical</option>
-                                <option value="SANCORSALUD">SancorSalud</option>
-                                <option value="OSPRERA">OSPRERA</option>
-                                <option value="UPCN">UPCN</option>
-                                <option value="OSDE">OSDE</option>
-                                <option value="PARTICULAR">Particular</option>
+                                <option th:selected="${paciente.obraSocial.name == 'OSPE'}" value="OSPE"> OSPE</option>
+                                <option th:selected="${paciente.obraSocial.name == 'SWISS_MEDICAL'}" value="SWISS_MEDICAL">SwissMedical</option>
+                                <option th:selected="${paciente.obraSocial.name == 'SANCORSALUD'}" value="SANCORSALUD">SancorSalud</option>
+                                <option th:selected="${paciente.obraSocial.name == 'OSPRERA'}" value="OSPRERA">OSPRERA</option>
+                                <option th:selected="${paciente.obraSocial.name == 'UPCN'}" value="UPCN">UPCN</option>
+                                <option th:selected="${paciente.obraSocial.name == 'OSDE'}" value="OSDE">OSDE</option>
+                                <option th:selected="${paciente.obraSocial.name == 'PARTICULAR'}" value="PARTICULAR">Particular</option>
                             </select>   
                         </div>
                     </div>
@@ -140,18 +145,15 @@
                                 class="form-select"
                                 id="pacienteSexo"
                                 name="sexo"
-                                th:value="${paciente.sexo}"
                             >
-                                <option selected>Elige una opción</option>
-                                <option value="MASCULINO">Masculino</option>
-                                <option value="FEMENINO">Femenino</option>
-                                <option value="X">X</option>
+                                <option th:selected="${paciente.sexo.name == 'MASCULINO'}" value="MASCULINO">Masculino</option>
+                                <option th:selected="${paciente.sexo.name == 'FEMENINO'}" value="FEMENINO">Femenino</option>
+                                <option th:selected="${paciente.sexo.name == 'X'}" value="X">X</option>
                             </select>
                         </div>
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                   
                     <div class="col-lg-5">
                         <div class="input-group mb-3">
                             <label
@@ -169,50 +171,110 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-5">
-                        <div class="input-group my-3">
-                            <label
-                                for="password"
-                                class="input-group-text"
-                            >Contraseña</label>
-                            <input
-                                type="password"
-                                class="form-control"
-                                name="password"
-                                placeholder="******"
-                                th:value="${paciente.password}"
-                            >
-                        </div>
-                    </div>
-                    <div class="col-lg-5">
-                        <div class="input-group my-3">
-                            <label
-                                for="password"
-                                class="input-group-text"
-                            >Repetir Contraseña</label>
-                            <input
-                                type="password"
-                                class="form-control"
-                                name="password2"
-                                placeholder="******"
-                            >
-                        </div>
-                    </div>
-                </div>        
                 <div class="row justify-content-center mt-5">
                     <div class="col-lg-4 d-grid">
-                        <button
-                            type="submit"
-                            class="btn btn-primary botones"
-                        >Guardar cambios</button>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Guardar Cambios
+                    </button>
                     </div>
                 </div>
-                
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="input-group mb-3">
+                                    <label
+                                            class="input-group-text"
+                                            for="contrasenha"
+                                    >Contraseña</label>
+                                    <input
+                                            type="password"
+                                            class="form-control"
+                                            name="password"
+                                            placeholder="********"
+                                            id="contrasenha"
+                                    >
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                                <button
+                                        type="submit"
+                                        class="btn btn-primary"
+                                >Confirmar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <form th:action="@{/paciente/cambiarContrasenha}" method="post" >
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cambiarContrasenha">
+                    Cambiar Contraseña
+                </button>
 
+                <div class="modal fade" id="cambiarContrasenha" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="input-group mb-3">
+                                    <label
+                                            class="input-group-text"
+                                            for="miContrasenha"
+                                    >Contraseña Anterior</label>
+                                    <input
+                                            type="password"
+                                            class="form-control"
+                                            name="password"
+                                            placeholder="********"
+                                            id="miContrasenha"
+                                    >
+                                </div>
+                                <div class="input-group mb-3">
+                                    <label
+                                            class="input-group-text"
+                                            for="nuevaContrasenha"
+                                    >Nueva Contraseña</label>
+                                    <input
+                                            type="password"
+                                            class="form-control"
+                                            name="newPassword"
+                                            placeholder="********"
+                                            id="nuevaContrasenha"
+                                    >
+                                </div>
+                                <div class="input-group mb-3">
+                                    <label
+                                            class="input-group-text"
+                                            for="nuevaContrasenha2"
+                                    >Repetir Contraseña</label>
+                                    <input
+                                            type="password"
+                                            class="form-control"
+                                            name="newPassword2"
+                                            placeholder="********"
+                                            id="nuevaContrasenha2"
+                                    >
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                                <button type="submit" class="btn btn-primary">Cambiar Contraseña</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </form>
         </div>
-        
+
+
         
         <footer th:replace="/fragments/footer :: footer"></footer>
         <script
