--- a/AppServSalud/src/main/resources/templates/index.html
+++ b/AppServSalud/src/main/resources/templates/index.html
@@ -1,80 +1,76 @@
 <!DOCTYPE html>
 <html
-    lang="es"
-    xmlns:th="http://www.thymeleaft.org"
+        lang="es"
+        xmlns:th="http://www.thymeleaft.org"
 >
-    <head th:replace="/fragments/head :: head"></head>
-    <body>
-        <header th:replace="/fragments/header :: header" ></header>
-        <main>
-            <div class="container" role="alert">
-            <div class="container-fluid m-5 contenedor">
-                <div
-                    th:if="${error != null}"
-                    class="card text-white bg-danger mb-3 mensajeError"
-                >
-                    <div class="card-body">
-                        <h5 class="card-title">Error!</h5>
-                        <p
-                            class="card-text"
-                            th:text="${error}"
-                        ></p>
-                    </div>
-                </div>
-                <div
-                    th:if="${exito != null}"
-                    class="card text-white bg-success mb-3 mt-3 mensajeExito"
-                >
-                    <div class="card-body">
-                        <h5 class="card-title">Exito!</h5>
-                        <p
-                            class="card-text"
-                            th:text="${exito}"
-                        ></p>
-                    </div>
-                </div>
+<head th:replace="/fragments/head :: head"></head>
+
+<body>
+<header th:replace="/fragments/header :: header"></header>
+<main>
+
+    <div class="toast-exito text-bg-success p-3" id="success-toast-div" th:if="${exito != null}">
+        <div>
+            <p th:text="${exito}"></p>
+            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                <div id="progress-bar-success" class="progress-bar" style="width:100%"></div>
             </div>
         </div>
-            <section class="tabla">
-                <table class="tablas">
-                    <tbody>
-                        <tr>
-                            <th style="color: aliceblue;">¿Quiénes somos?</th>
-                            <th style="color: aliceblue;">Turnos</th>
-                            <th style="color: aliceblue;">Guardias</th>
-                        </tr>
-                    </tbody>
-                </table>
+        <button type="button" class="btn-close" id="exito-toast" aria-label="Close"></button>
+    </div>
 
-            </section>
+    <div class="toast-error text-bg-danger p-3" id="error-toast-div" th:if="${error != null}">
+        <div>
+            <p th:text="${error}"></p>
+            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                <div id="progress-bar-error" class="progress-bar" style="width:100%"></div>
+            </div>
+        </div>
+        <button type="button" class="btn-close" id="error-toast" aria-label="Close"></button>
+    </div>
 
-            <center>
-                <section>
-                    <p></p>
-                    <table class="perfil">
-                        <tbody>
-                            <tr>
-                                <th>Mi perfil</th>
-                                <th>Telemedicina</th>
-                                <th>Laboratorio</th>
-                                <th>Diagnóstico por imágenes</th>
-                            </tr>
-                        </tbody>
-                    </table>
-                </section>
 
-            </center>
-        </main>
-        <footer th:replace="/fragments/footer :: footer"></footer>
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+    <section class="tabla">
+        <table class="tablas">
+            <tbody>
+            <tr>
+                <th style="color: aliceblue;">¿Quiénes somos?</th>
+                <th style="color: aliceblue;">Turnos</th>
+                <th style="color: aliceblue;">Guardias</th>
+            </tr>
+            </tbody>
+        </table>
+
+    </section>
+
+    <center>
+        <section>
+            <p></p>
+            <table class="perfil">
+                <tbody>
+                <tr>
+                    <th>Mi perfil</th>
+                    <th>Telemedicina</th>
+                    <th>Laboratorio</th>
+                    <th>Diagnóstico por imágenes</th>
+                </tr>
+                </tbody>
+            </table>
+        </section>
+
+    </center>
+</main>
+<footer th:replace="/fragments/footer :: footer"></footer>
+<script
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"
+></script>
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"
+></script>
+<script th:src="@{/js/toast.js}"></script>
+</body>
 </html>
