--- a/AppServSalud/src/main/resources/templates/index.html
+++ b/AppServSalud/src/main/resources/templates/index.html
@@ -8,27 +8,7 @@
 <body>
 <header th:replace="/fragments/header :: header"></header>
 <main>
-
-    <div class="toast-exito text-bg-success p-3" id="success-toast-div" th:if="${exito != null}">
-        <div>
-            <p th:text="${exito}"></p>
-            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-                <div id="progress-bar-success" class="progress-bar" style="width:100%"></div>
-            </div>
-        </div>
-        <button type="button" class="btn-close" id="exito-toast" aria-label="Close"></button>
-    </div>
-
-    <div class="toast-error text-bg-danger p-3" id="error-toast-div" th:if="${error != null}">
-        <div>
-            <p th:text="${error}"></p>
-            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-                <div id="progress-bar-error" class="progress-bar" style="width:100%"></div>
-            </div>
-        </div>
-        <button type="button" class="btn-close" id="error-toast" aria-label="Close"></button>
-    </div>
-
+    <div th:replace="/fragments/toast :: div"></div>
 
     <section class="tabla">
         <table class="tablas">
@@ -40,7 +20,6 @@
             </tr>
             </tbody>
         </table>
-
     </section>
 
     <center>
