--- a/AppServSalud/src/main/resources/templates/pacientes.html
+++ b/AppServSalud/src/main/resources/templates/pacientes.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <header th:replace="/fragments/header :: header"></header>
+<div th:replace="/fragments/toast :: div"></div>
 <main class="container">
     <div class="buscador">
         <h3>Filtar por dato:</h3>
@@ -155,5 +156,6 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"
 ></script>
+<script th:src="@{/js/toast.js}"></script>
 </body>
 </html>
