--- a/AppServSalud/src/main/resources/templates/profesionales.html
+++ b/AppServSalud/src/main/resources/templates/profesionales.html
@@ -6,6 +6,7 @@
 <head th:replace="/fragments/head :: head"></head>
 <body>
 <header th:replace="/fragments/header :: header"></header>
+<div th:replace="/fragments/toast :: div"></div>
 <main>
     <div class="buscador">
         <h3>Filtar por dato:</h3>
@@ -147,5 +148,6 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"
 ></script>
+<script th:src="@{/js/toast.js}"></script>
 </body>
 </html>
