--- a/AppServSalud/src/main/resources/templates/login.html
+++ b/AppServSalud/src/main/resources/templates/login.html
@@ -1,75 +1,82 @@
 <!DOCTYPE html>
-<html
-    lang="es"
-    xmlns:th="http://www.thymeleaft.org"
->
-    <head th:replace="/fragments/head :: head"></head>
-    <body>
-        <header th:replace="/fragments/header :: header"></header>
-        <h2 class="text-center mt-5">Ingresar</h2>
-        <div class="container-sm mt-5">
-            <form
-                th:action="@{/login}"
-                method="post"
-            >
-                <div class="row justify-content-center">
-                    <div class="col-lg-5">
-                        <div class="input-group mb-3">
-                            <label
-                                for="exampleFormControlInput1"
-                                class="input-group-text"
-                            >Email</label>
-                            <input
-                                type="email"
-                                class="form-control"
-                                id="exampleFormControlInput1"
-                                placeholder="name@example.com"
-                                name="username"
-                            >
-                        </div>
+<html lang="es" xmlns:th="http://www.thymeleaft.org">
+
+<head th:replace="/fragments/head :: head"></head>
+
+<body>
+    <header th:replace="/fragments/header :: header"></header>
+    <div th:replace="/fragments/toast :: div"></div>
+    <h2 class="text-center mt-5">Ingresar</h2>
+    <div class="container-sm mt-5">
+        <form th:action="@{/login}" method="post">
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
+                    <div class="input-group mb-3">
+                        <label for="exampleFormControlInput1" class="input-group-text">Email</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1"
+                            placeholder="name@example.com" name="username">
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-5">
-                        <div class="input-group mb-3">
-                            <label
-                                for="inputPassword5"
-                                class="input-group-text"
-                            >Contraseña</label>
-                            <input
-                                type="password"
-                                id="inputPassword5"
-                                class="form-control"
-                                aria-describedby="passwordHelpBlock"
-                                name="password"
-                            >
-                        </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
+                    <div class="input-group mb-3">
+                        <label for="inputPassword5" class="input-group-text">Contraseña</label>
+                        <input type="password" id="inputPassword5" class="form-control"
+                            aria-describedby="passwordHelpBlock" name="password">
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-2 mb-3 d-grid">
-                        <input
-                            type="submit"
-                            placeholder="Iniciar session"
-                            class="btn btn-primary"
-                        >
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-2 mb-3 d-grid">
+                    <input type="submit" placeholder="Iniciar session" class="btn btn-primary">
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+        Recuperar Contraseña
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <form th:action="@{/recuperarCuenta}">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Recuperar Cuenta</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body row justify-content-center">
+                        <label for="exampleFormControlInput1" class="input-group-text">Email</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1"
+                            placeholder="name@example.com" name="email">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-primary">Recuperar cuenta</button>
                     </div>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
+    </div>
 
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script th:src="@{/js/toast.js}"></script>
+</body>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-
-    </body>
 </html>
