recuperar cuenta por email

--- a/AppServSalud/src/main/resources/templates/forms/recuperarCuenta.html
+++ b/AppServSalud/src/main/resources/templates/forms/recuperarCuenta.html
@@ -8,7 +8,7 @@
     <div th:replace="/fragments/toast :: div"></div>
     <h3>Recuperacion de contraseña</h3>
 
-    <form th:action="@{/recuperarCuenta}" id="form" class="container mt-5">
+    <form th:action="@{/recuperarCuenta}" method="post" class="container mt-5">
 
         <div class="row justify-content-center">
             <div class="col-lg-5">
