se crea index de inicio, se modifica card-body de de perfil

--- a/AppServSalud/src/main/resources/static/styles/index.css
+++ b/AppServSalud/src/main/resources/static/styles/index.css
@@ -52,9 +52,10 @@ body {
 }
 
 footer {
-    margin-top: 100%;
-    align-items: end;
-    background-color: rgba(114, 169, 114, 0.25)
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(114, 169, 114, 0.25);
 }
 
 .footer_textos {
