--- a/AppServSalud/src/main/resources/templates/fragments/head.html
+++ b/AppServSalud/src/main/resources/templates/fragments/head.html
@@ -23,4 +23,7 @@
           rel="stylesheet"
           th:href="@{/styles/footer.css}"
   >
+  <link rel="stylesheet"
+        th:href="@{/styles/calificacionProfesional.css}">
+  <script src="https://kit.fontawesome.com/6959f9ca80.js" crossorigin="anonymous"></script>
 </head>
