--- a/AppServSalud/src/main/resources/templates/vistaPerfil.html
+++ b/AppServSalud/src/main/resources/templates/vistaPerfil.html
@@ -27,7 +27,7 @@
                                      th:if="${usuario.imagen == null}" >
                             </div>
                         </header>
-                        <section class="card-body">
+                        <section class="card-body card-body-perfil">
                                 <h1 class="info-h1" > 
                                     <span th:text="${usuario.nombre}" >
 
