--- a/AppServSalud/src/main/resources/static/styles/perfil.css
+++ b/AppServSalud/src/main/resources/static/styles/perfil.css
@@ -23,7 +23,7 @@
     height: 120px;
     text-align: center;
 }
-.card-body{
+.card-body-perfil{
     position: relative;
     top: 160px;
     width: 100%;
