--- a/AppServSalud/src/main/resources/templates/forms/registroProfesional.html
+++ b/AppServSalud/src/main/resources/templates/forms/registroProfesional.html
@@ -203,13 +203,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center mt-5">
-                    <div class="col-lg-4 d-grid">
-                        <button
-                            type="submit"
-                            class="btn btn-primary botones"
-                        >Registrar</button>
-                    </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-primary">Cambiar Contraseña</button>
                 </div>
             </form>
         </div>
