--- a/AppServSalud/src/main/resources/templates/fragments/header.html
+++ b/AppServSalud/src/main/resources/templates/fragments/header.html
@@ -14,24 +14,7 @@
                 Clinica Medica
             </a>
         </div>
-        <div class="d-flex">
-            <div>
-                <form
-                    class="d-flex mt-2"
-                    role="search"
-                >
-                    <input
-                        class="form-control"
-                        type="search"
-                        placeholder="Search"
-                        aria-label="Search"
-                    >
-                    <button
-                        class="btn btn-outline-primary"
-                        type="submit"
-                    >Buscar</button>
-                </form>
-            </div>
+        
             <div>
                 <nav
                     class="navbar navbar-expand-lg"
@@ -144,6 +127,12 @@
                                    th:href="@{/paciente/modificar/__${#httpServletRequest.getRemoteUser()}__}"
                                    sec:authorize="hasRole('ROLE_PACIENTE')"
                                    >Editar Perfil</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link active" 
+                                       th:href="@{/admin/modificar/__${#httpServletRequest.getRemoteUser()}__}"
+                                       sec:authorize="hasRole('ROLE_ADMIN')"
+                                       >Editar Perfil</a>
                                 </li>
                                <li class="nav-item" sec:authorize="isAuthenticated()">
                                 <form
