implementacion de permisos para los admins

--- a/AppServSalud/src/main/resources/templates/fragments/header.html
+++ b/AppServSalud/src/main/resources/templates/fragments/header.html
@@ -71,7 +71,9 @@
                                     Administracion
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a
+                                    <li
+                                    sec:authorize="hasRole('ROLE_ADD_PROFESIONAL')"
+                                    ><a
                                             class="dropdown-item"
                                             href="/profesional/registro"
                                     >Registrar Profesional</a></li>
