--- a/AppServSalud/src/main/resources/templates/login.html
+++ b/AppServSalud/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
                     <div class="input-group mb-3">
                         <label for="exampleFormControlInput1" class="input-group-text">Email</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1"
-                            placeholder="name@example.com" name="username">
+                            placeholder="name@example.com" name="username" required>
                     </div>
                 </div>
             </div>
@@ -23,22 +23,27 @@
                     <div class="input-group mb-3">
                         <label for="inputPassword5" class="input-group-text">Contraseña</label>
                         <input type="password" id="inputPassword5" class="form-control"
-                            aria-describedby="passwordHelpBlock" name="password">
+                            aria-describedby="passwordHelpBlock" name="password" required>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-2 mb-3 d-grid">
-                    <input type="submit" placeholder="Iniciar session" class="btn btn-primary">
+                <div class="col-lg-3">
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                        Recuperar Contraseña
+                    </button>
+                </div>
+                <div class="col-lg-2">
+                    <button type="submit" class="btn btn-primary">
+                        Ingresar
+                    </button>
                 </div>
             </div>
         </form>
     </div>
 
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-        Recuperar Contraseña
-    </button>
+    
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
