--- a/AppServSalud/src/main/resources/templates/forms/editarProfesionalAdmin.html
+++ b/AppServSalud/src/main/resources/templates/forms/editarProfesionalAdmin.html
@@ -18,17 +18,17 @@
         <div class="container">
             <form
                 class="formulario"
-                th:action="@{/admin/modificar}"
+                th:action="@{/admin/modProfesional}"
                 method="POST"
             >
                 <div class="text-center mb-5">
-                    <h3 class="card-title">EDITAR PERFIL</h3>
+                    <h3 class="card-title">EDITAR PROFESIONAL</h3>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-5">
                         <div class="input-group mb-3">
                             <label
-                                for="adminNombre"
+                                for="profesionalNombre"
                                 class="input-group-text"
                             >Nombre</label>
                             <input
@@ -36,15 +36,15 @@
                                 class="form-control"
                                 name="nombre"
                                 placeholder="Juan"
-                                id="adminNombre"
-                                th:value="${admin.nombre}"
+                                id="profesionalNombre"
+                                th:value="${profesional.nombre}"
                             >
                         </div>
                     </div>
                     <div class="col-lg-5">
                         <div class="input-group mb-3">
                             <label
-                                for="adminApellido"
+                                for="profesionalApellido"
                                 class="input-group-text"
                             >Apellido</label>
                             <input
@@ -52,8 +52,8 @@
                                 class="form-control"
                                 name="apellido"
                                 placeholder="Rodriguez"
-                                id="adminApellido"
-                                th:value="${admin.apellido}"
+                                id="profesionalApellido"
+                                th:value="${profesional.apellido}"
                             >
                         </div>
                     </div>
@@ -63,15 +63,15 @@
                         <div class="input-group mb-3">
                             <label
                                 class="input-group-text"
-                                for="adminDni"
+                                for="profesionalDni"
                             >N° de Documento</label>
                             <input
                                 class="form-control"
                                 type="number"
                                 name="dni"
                                 placeholder="77888999"
-                                id="adminDni"
-                                th:value="${admin.dni}"
+                                id="profesionalDni"
+                                th:value="${profesional.dni}"
                             >
                         </div>
                     </div>
@@ -86,6 +86,7 @@
                                 type="date"
                                 name="fechaDeNacimiento"
                                 id="fechaNacimiento"
+                                th:value="${profesional.fechaNacimiento}"
                             />
                         </div>
                     </div>
@@ -100,10 +101,9 @@
                                 id="profesionalSexo"
                                 name="sexo"
                             >
-                                <option selected>Elige una opción</option>
-                                <option value="MASCULINO">Masculino</option>
-                                <option value="FEMENINO">Femenino</option>
-                                <option value="X">X</option>
+                                <option th:selected="${profesional.sexo.name == 'MASCULINO'}" value="MASCULINO">Masculino</option>
+                                <option th:selected="${profesional.sexo.name == 'FEMENINO'}" value="FEMENINO">Femenino</option>
+                                <option th:selected="${profesional.sexo.name == 'X'}" value="X">X</option>
                             </select>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                     <div class="col-lg-5">
                         <div class="input-group mb-3">
                             <label
-                                for="adminCorreo"
+                                for="profesionalCorreo"
                                 class="input-group-text"
                             >Correo</label>
                             <input
@@ -120,8 +120,8 @@
                                 class="form-control"
                                 name="email"
                                 placeholder="email@email.com"
-                                id="adminCorreo"
-                                th:value="${admin.email}"
+                                id="profesionalCorreo"
+                                th:value="${profesional.email}"
                             >
                         </div>
                     </div>
@@ -129,15 +129,15 @@
                         <div class="input-group mb-3">
                             <label
                                 class="input-group-text"
-                                for="adminTelefono"
+                                for="profesionalTelefono"
                             >N° de Telefono</label>
                             <input
                                 type="number"
                                 class="form-control"
                                 name="telefono"
                                 placeholder="1123456789"
-                                id="adminTelefono"
-                                th:value="${admin.telefono}"
+                                id="profesionalTelefono"
+                                th:value="${profesional.telefono}"
                             >
                         </div>
                     </div>
@@ -171,6 +171,42 @@
                             >
                         </div>
                     </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-6">
+                        <div class="input-group mb-3">
+                            <label
+                                class="input-group-text"
+                                for="profesionalMatricula"
+                            >N° de Matrícula</label>
+                            <input
+                                type="number"
+                                class="form-control"
+                                name="matriculaProfesional"
+                                placeholder="0123456789"
+                                id="profesionalMatricula"
+                                th:value="${profesional.matriculaProfesional}"
+                            >
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="input-group mb-3">
+                            <label
+                                class="input-group-text"
+                                for="especialidad"
+                            >Especialidad</label>
+                            <select
+                                class="form-select"
+                                id="especialidad"
+                                name="especialidad"
+                            >
+                                <option th:selected="${profesional.especialidad.name == 'CLINICA'}" value="CLINICA">Clínica</option>
+                                <option th:selected="${profesional.especialidad.name == 'CARDIOLOGIA'}" value="CARDIOLOGIA">Cardiologia</option>
+                                <option th:selected="${profesional.especialidad.name == 'GINECOLOGIA'}" value="GINECOLOGIA">Ginecologia</option>
+                                <option th:selected="${profesional.especialidad.name == 'PEDIATRIA'}" value="PEDIATRIA">Pediatria</option>
+                            </select>
+                        </div>
+                    </div> 
                 </div>
                 <div class="row justify-content-center mt-5">
                     <div class="col-lg-4 d-grid">
