--- a/AppServSalud/src/main/resources/templates/profesionales.html
+++ b/AppServSalud/src/main/resources/templates/profesionales.html
@@ -55,7 +55,8 @@
                 <th>DNI</th>
                 <th>Matricula</th>
                 <th>Especialidad</th>
-                <th>Acciones</th>
+                <th>Estado</th>
+                <th>Modificar</th>
             </tr>
             </thead>
             <tbody th:if="${profesionalesActivos != null || !profesionalesActivos.isEmpty}">
@@ -76,8 +77,18 @@
                                 th:value="${profesional.id}"
                                 name="idProfesional"
                         >
-                        <button type="submit">Dar de baja</button>
+                        <input type="image" th:src="@{/assets/Altas_y_bajas.png}" width="40" height="30">
                     </form>
+                </td>
+                <td>
+                    <a th:href="@{/admin/modProfesional/__${profesional.email}__}"> 
+                    <img
+                    th:src="@{/assets/modificar.png}"
+                    alt="modificar"
+                    width="40"
+                    height="30"
+                    >
+                    </a>
                 </td>
             </tr>
             </tbody>
