--- a/AppServSalud/src/main/resources/templates/forms/crearAdmin.html
+++ b/AppServSalud/src/main/resources/templates/forms/crearAdmin.html
@@ -1,202 +1,112 @@
 <!DOCTYPE html>
-<html
-    lang="es"
-    xmlns:th="http://www.thymeleaft.org"
->
+<html lang="es" xmlns:th="http://www.thymeleaft.org">
 
-    <head th:replace="/fragments/head :: head">
-        <head>
-            <link
-                rel="stylesheet"
-                th:href="@{/styles/profesional.css}"
-            >
-        </head>
-    <body>
-        <header th:replace="/fragments/header :: header"></header>
+<head th:replace="/fragments/head :: head">
 
-        <div th:replace="/fragments/toast :: div"></div>
-        <div class="container">
-            <form
-                class="formulario"
-                th:action="@{/admin/registro}"
-                method="POST"
-            >
-                <div class="text-center mb-5">
-                    <h3 class="card-title">Crear perfil como administrador</h3>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-5">
-                        <div class="input-group mb-3">
-                            <label
-                                for="adminNombre"
-                                class="input-group-text"
-                            >Nombre</label>
-                            <input
-                                type="text"
-                                class="form-control"
-                                name="nombre"
-                                placeholder="Juan"
-                                id="adminNombre"
-                            >
-                        </div>
-                    </div>
-                    <div class="col-lg-5">
-                        <div class="input-group mb-3">
-                            <label
-                                for="adminApellido"
-                                class="input-group-text"
-                            >Apellido</label>
-                            <input
-                                type="text"
-                                class="form-control"
-                                name="apellido"
-                                placeholder="Rodriguez"
-                                id="adminApellido"
-                            >
-                        </div>
-                    </div>
-                </div>
-               
-                    </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-3">
-                        <div class="input-group mb-3">
-                            <label
-                                class="input-group-text"
-                                for="adminSexo"
-                            >Sexo</label>
-                            <select
-                                class="form-select"
-                                id="adminSexo"
-                                name="sexo"
-                            >
-                                <option selected>Elige una opción</option>
-                                <option value="MASCULINO">Masculino</option>
-                                <option value="FEMENINO">Femenino</option>
-                                <option value="X">X</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="input-group mb-3">
-                            <label
-                                class="input-group-text"
-                                for="permisos"
-                                
-                               
-                            >Permisos</label>
-                            
-                            
-                            <div class="btn-group" 
-                                 role="group" 
-                                 aria-label="Basic checkbox toggle button group"
-                                 th:each="permiso : ${permisos}">
-  <input type="checkbox" 
-         class="btn-check" 
-         id="btncheck1" 
-         autocomplete="off"
-         name="permisos">
-  <label class="btn btn-outline-primary" 
-         for="btncheck1" th:text="${permiso.permiso}"></label>
+    <head>
+        <link rel="stylesheet" th:href="@{/styles/profesional.css}">
+    </head>
 
+<body>
+    <header th:replace="/fragments/header :: header"></header>
 
-</div>
-                            <select
-                                class="form-select"
-                                id="permisos"
-                                name="permisos"
-                                multiple
-                                th:each="permiso : ${permisos}"
-                            >
-                                <option selected>Elige una opción</option>
-                                <option th:value="${permiso.permiso}" > sdfaf</option>
-                            </select>
-                        </div>
+    <div th:replace="/fragments/toast :: div"></div>
+    <div class="container">
+        <form class="formulario" th:action="@{/admin/registro}" method="POST">
+            <div class="text-center mb-5">
+                <h3 class="card-title">Crear perfil como administrador</h3>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-4">
+                    <div class="input-group mb-3">
+                        <label for="adminNombre" class="input-group-text">Nombre</label>
+                        <input type="text" class="form-control" name="nombre" placeholder="Juan" id="adminNombre">
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-5">
-                        <div class="input-group mb-3">
-                            <label
-                                for="adminCorreo"
-                                class="input-group-text"
-                            >Correo</label>
-                            <input
-                                type="email"
-                                class="form-control"
-                                name="email"
-                                placeholder="email@email.com"
-                                id="adminCorreo"
-                            >
-                        </div>
-                    </div>
-                    <div class="col-lg-5">
-                        <div class="input-group mb-3">
-                            <label
-                                class="input-group-text"
-                                for="adminTelefono"
-                            >N° de Telefono</label>
-                            <input
-                                type="number"
-                                class="form-control"
-                                name="telefono"
-                                placeholder="1123456789"
-                                id="adminTelefono"
-                            >
-                        </div>
+                <div class="col-lg-4">
+                    <div class="input-group mb-3">
+                        <label for="adminApellido" class="input-group-text">Apellido</label>
+                        <input type="text" class="form-control" name="apellido" placeholder="Rodriguez"
+                            id="adminApellido">
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-5">
-                        <div class="input-group my-3">
-                            <label
-                                for="password"
-                                class="input-group-text"
-                            >Contraseña</label>
-                            <input
-                                type="password"
-                                class="form-control"
-                                name="password"
-                                placeholder="******"
-                            >
-                        </div>
-                    </div>
-                    <div class="col-lg-5">
-                        <div class="input-group my-3">
-                            <label
-                                for="password"
-                                class="input-group-text"
-                            >Repetir Contraseña</label>
-                            <input
-                                type="password"
-                                class="form-control"
-                                name="password2"
-                                placeholder="******"
-                            >
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                
-                    
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="submit" class="btn btn-primary">Subir</button>
-                </div>
-            </form>
-        </div>
+            </div>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-        <script th:src="@{/js/toast.js}"></script>
-    </body>
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="input-group mb-3">
+                        <label class="input-group-text" for="adminSexo">Sexo</label>
+                        <select class="form-select" id="adminSexo" name="sexo">
+                            <option selected>Elige una opción</option>
+                            <option value="MASCULINO">Masculino</option>
+                            <option value="FEMENINO">Femenino</option>
+                            <option value="X">X</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-4">
+                    <div class="input-group mb-3">
+                        <label for="adminCorreo" class="input-group-text">Correo</label>
+                        <input type="email" class="form-control" name="email" placeholder="email@email.com"
+                            id="adminCorreo">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="input-group mb-3">
+                        <label class="input-group-text" for="adminTelefono">N° de Telefono</label>
+                        <input type="number" class="form-control" name="telefono" placeholder="1123456789"
+                            id="adminTelefono">
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-4">
+                    <div class="input-group my-3">
+                        <label for="password" class="input-group-text">Contraseña</label>
+                        <input type="password" class="form-control" name="password" placeholder="******">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="input-group my-3">
+                        <label for="password" class="input-group-text">Repetir Contraseña</label>
+                        <input type="password" class="form-control" name="password2" placeholder="******">
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="input-group mb-3">
+                        <label class="input-group-text" for="permisos">Permisos</label>
+
+                        <div class="btn-group m-1" role="group" aria-label="Basic checkbox toggle button group"
+                            th:each="permiso : ${permisos}">
+                            <input class="btn-check" type="checkbox" name="permisos" th:id="${permiso.permiso.name}" th:value="${permiso.permiso.name}">
+                            <label class="btn btn-outline-primary" th:text="${permiso.permiso.name}"
+                                th:for="${permiso.permiso.name}"></label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-2">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+            </div>
+            <div class="col-lg-2">
+                <button type="submit" class="btn btn-primary">Subir</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+    <script th:src="@{/js/toast.js}"></script>
+</body>
+
 </html>
