--- a/AppServSalud/src/main/resources/templates/fragments/head.html
+++ b/AppServSalud/src/main/resources/templates/fragments/head.html
@@ -25,5 +25,10 @@
   >
   <link rel="stylesheet"
         th:href="@{/styles/calificacionProfesional.css}">
+  <link
+          rel="stylesheet"
+          th:href="@{/styles/especialidades.css}"
+  >
   <script src="https://kit.fontawesome.com/6959f9ca80.js" crossorigin="anonymous"></script>
+  <script src=""></script>
 </head>
