--- a/AppServSalud/src/main/resources/templates/infoTurnos.html
+++ b/AppServSalud/src/main/resources/templates/infoTurnos.html
@@ -23,16 +23,53 @@
                 <h2></h2>
                 <h2><span style="color: #006cb0"><strong><span style="font-size: 18pt">Portal de Pacientes</span></strong></span></h2>
                 <p>&nbsp;</p>
-                <ul>
-                    <li><span style="color: #006cb0"><strong><a href="#">¿Cómo crear mi cuenta?</a></strong></span></li>
-                    <li><span style="color: #006cb0"><strong><a href="#">¿Cómo reservar mis turnos?</a></strong></span></li>
-                    <li><span style="color: #006cb0"><strong><a href="#">¿Cómo ver y descargar los resultados de mis estudios?</a></strong></span></li>
-                </ul>
-                <p>&nbsp;</p>
+
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                ¿Cómo crear mi cuenta?
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>Pasos para crear Cuenta</strong> Para crear una cuenta primero debreas dirigirte a registrarce ,
+                                luego cargar tus datos personales que encontraras en el fomrulario , y luego ingresar.
+                                Ya con esto tendras acceso a todos los servicios.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                ¿Cómo reservar mis turnos?
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>Pasos para reservar Turnos.</strong> Lo primero que deberas hacer es ingrear con tus credenciales(email,password), si aun no las tienes revisa ¿Como Crear Una Cuenta?.
+                                Luego de ingresar dirijete ala seccion turnos , donde encontraras la oferta de profesionales y con sus dias y horarios de atencion, tan solo tiene que elejir ,
+                                el dia y horario que se ajusten a ti .
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                ¿Cómo ver y descargar los resultados de mis estudios?
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>EN DESARROLLO</strong> Estamos trabajando para brindar una mejor experiencia de uso, gracias por su interes .
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
-        <div class="col-md-4">
+    </div>
+        <div class="col-md-4" style="margin:0 auto;">
             <div class="bloque-informacion-generica">
                 <div class="informacion-util-generica">
                     <h1> Información Útil </h1>
@@ -53,8 +90,6 @@
                 </div>
             </div>
         </div>
-
-    </div>
 </div>
 
 <footer th:replace="/fragments/footer :: footer"></footer>
